--- a/nvme_ol_83.adoc
+++ b/nvme_ol_83.adoc
@@ -22,19 +22,19 @@ include::_include/hu/reuse_hu_cloud_note.adoc[]
 
 == Features
 
-* Oracle Linux 8.3 has In-kernel NVMe multipath enabled by default for NVMe namepsaces.
+* Oracle Linux 8.3 has in-kernel NVMe multipath enabled by default for NVMe namepsaces.
 
-* With Oracle Linux 8.3, nvme-fc auto-connect scripts are included in the native nvme-cli package. So one may rely on these native auto-connect scripts itself instead of having to install the external vendor provided outbox auto-connect scripts.
+* With Oracle Linux 8.3, `nvme-fc auto-connect` scripts are included in the native nvme-cli package. You can rely on these native auto-connect scripts instead of installing the external vendor provided outbox auto-connect scripts.
 
-* With Oracle Linux 8.3, a native udev rule is already provided as part of the nvme-cli package which enables round-robin load balancing for NVMe multipath. So one need not manually create this rule any more .
+* With Oracle Linux 8.3, a native udev rule is already provided as part of the nvme-cli package which enables round-robin load balancing for NVMe multipath. Therefore, you need not manually create this rule anymore.
 
-* With Oracle Linux 8.3, both NVMe & SCSI traffic can be run on the same co-existent host. In fact, that is expected to be the commonly deployed host config for customers. So for SCSI, one may configure dm-multipath as usual for SCSI LUNs resulting in mpath devices, whereas NVMe multipath may be used to configure NVMe-oF multipath devices (i.e. /dev/nvmeXnY) on the host.
+* With Oracle Linux 8.3, both NVMe and SCSI traffic can be run on the same co-existent host. In fact, that is expected to be the commonly deployed host configuration. So for SCSI, you can configure dm-multipath as usual for SCSI LUNs resulting in mpath devices, whereas NVMe multipath can be used to configure NVMe-oF multipath devices (for example, /dev/nvmeXnY) on the host.
 
 * With Oracle Linux 8.3, the NetApp plugin in the native nvme-cli is capable of displaying ONTAP details as well for ONTAP namespaces.
 
 == Configuration requirements
 
-Refer to the http://mysupport.netapp.com/matrix3[NetApp InterOperability Matrix (IMT)^] for exact details regarding supported configs and current list of supported configurations.
+Refer to the http://mysupport.netapp.com/matrix3[NetApp InterOperability Matrix (IMT)^] for exact details regarding supported configurations and current list of supported configurations.
 
 == Enable NVMe/FC with Oracle Linux 8.3
 
@@ -57,7 +57,7 @@ _5.4.17-2011.7.4.el8uek.x86_64_
 nvme-cli-1.12-2.el8.x86_64_
 ----
 
-. On the Oracle Linux 8.3 host, check the hostnqn string at /etc/nvme/hostnqn and verify that it matches the hostnqn string for the corresponding subsystem on the ONTAP array.
+. On the Oracle Linux 8.3 host, check the hostnqn string at `/etc/nvme/hostnqn` and verify that it matches the `hostnqn` string for the corresponding subsystem on the ONTAP array.
 +
 ----
 #*cat /etc/nvme/hostnqn* +
@@ -72,7 +72,7 @@ http://nqn.2014-08.org/[nqn.2014-08.org].nvmexpress:uuid:446c21ab-f4c1-47ed-9a8f
 ----
 +
 [NOTE]
-If the hostnqn strings do not match, you should use the vserver modify command to update the hostnqn string on your corresponding ONTAP array subsystem to match to the hostnqn string from /etc/nvme/hostnqn on the host.
+If the hostnqn strings do not match, you should use the `vserver modify` command to update the hostnqn string on your corresponding ONTAP array subsystem to match to the hostnqn string from `/etc/nvme/hostnqn` on the host.
 
 . Reboot the host.
 +
