OL 8.3 final edits

--- a/_include/nvme/reuse_nvme_verbose_logging.adoc
+++ b/_include/nvme/reuse_nvme_verbose_logging.adoc
@@ -1,6 +1,5 @@
-.Steps
 
-. You can set the lpfc_log_verbose driver setting to any of the following values to log NVMe/FC events.
+. Set the `lpfc_log_verbose` driver setting to any of the following values to log NVMe/FC events.
 +
 ----
 #define LOG_NVME 0x00100000 /* NVME general events. */
