--- a/nvme_ol_83.adoc
+++ b/nvme_ol_83.adoc
@@ -259,8 +259,8 @@ nvme-subsys0 - NQN=http://nqn.1992-08.com/[nqn.1992-08.com].netapp:sn.b79f5c6e4d
 . Verify the NetApp plug-in displays correct values for each ONTAP namespace device.
 +
 ----
-. #nvme netapp ontapdevices -o column
-_Device      Vserver         Namespace Path             NSID UUID                               Size 
+#nvme netapp ontapdevices -o column
+Device      Vserver         Namespace Path             NSID UUID                               Size 
 ---------------- ------------------------- -------------------------------------------------- ---- ---------
 /dev/nvme0n1 LPE36002_ASA_BL /vol/fcnvme_1_0_0/fcnvme_ns 1 ae10e16d-1fa4-49c2-8594-02bf6f3b1af1 37.58GB 
 /dev/nvme0n10 LPE36002_ASA_BL /vol/fcnvme_1_0_9/fcnvme_ns 10 2cf00782-e2bf-40fe-8495-63e4501727cd 37.58GB 
@@ -341,33 +341,30 @@ _Device      Vserver         Namespace Path             NSID UUID               
 
 ----
 
+== Known issues 
+
+[options="header", cols="20, 20, 50, 20"]
+|===
+|NetApp Bug ID |Title |Description |Oracle Bugzilla
+|1517321 |Oracle Linux 8.x NVMe-oF Hosts create duplicate Persistent Discovery Controllers |
+On OL 8.X NVME-of hosts, Persistent Discovery Controllers (PDCs) are created by passing the -p option to the 'nvme discover' command. For a given initiator-target combination, only one PDC is expected to be created with each invocation of the 'nvme discover' command. However, beginning with ONTAP 9.10.1, Oracle Linux (OL) 8.x NVMe-oF hosts end up creating duplicate PDCs with each invocation of the 'nvme discover'
+command with the -p option. This leads to wastage of resources on both the host and the target. |https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=18118[18118^]
+|===
+
 == Troubleshooting
 
 Before commencing any troubleshooting for any NVMe/FC failures, make sure that you are running a configuration that is compliant to the Interoperability Matrix Tool (IMT) specifications and then proceed with the next steps to debug any host side issues.
 
 === LPFC verbose logging
 
-include::_include/hu/reuse_nvme_verbose_logging.adoc[]
+include::_include/nvme/reuse_nvme_verbose_logging.adoc[]
 
 === qla2xxx verbose logging
 
-include::_include/hu/reuse_nvme_qla2xxx_verbose_logging.adoc[]
+include::_include/nvme/reuse_nvme_qla2xxx_verbose_logging.adoc[]
 
 
-== Known issues 
-
-[options="header", cols="20, 20, 50"]
-|===
-|NetApp Bug ID |Title |Description |Oracle Bugzilla
-|1517321 |Oracle Linux 8.x NVMe-oF Hosts create duplicate Persistent Discovery Controllers |
-On OL 8.X NVME-of hosts, Persistent Discovery Controllers (PDCs) are created by passing the -p option to the 'nvme discover' command. For a given initiator-target combination, only one PDC is expected to be created with each invocation of the 'nvme discover' command. However, beginning with ONTAP 9.10.1, Oracle Linux (OL) 8.x NVMe-oF hosts end up creating duplicate PDCs with each invocation of the 'nvme discover'
-command with the -p option. This leads to wastage of resources on both the host and the target.
-
-|https://bugzilla.oracle.com/bugzilla/show_bug.cgi?id=18118[18118^]
-|===
-
-
-include::_include/hu/reuse_common_nvme_cli_errors.adoc[]
+include::_include/hu/reuse_hu_common_nvme_cli_errors.adoc[]
 
 === When to contact technical support
 
